# SimpleTerrain

./: .gitignore  CMakeLists.txt  README.md
media/: HlmsPbs1.material.json  Ogre.material  actual.material  terrain.material.json  test.material
setup/: Plugins.cfg
src/: Game.cpp  Game.h  Main.cpp  Terrain.cpp  Terrain.h  Window.cpp  Window.h
